# AndroidLearnOpenGL

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 3d_vertex.glsl  attenuation_light_color_fragment.glsl  color_fragment.glsl  cube_3d_fragment.glsl  diffuse_map_color_vertex.glsl  direction_light_color_fragment.glsl  flash_light_color_fragment.glsl  material_color_fragment.glsl  material_color_vertex.glsl  mirror_color_fragment.glsl  multi_cube_3d_vertex.glsl  multi_light_color_fragment.glsl  rectangle_shape_rad_fragment.glsl  rectangle_shape_rad_vertex.glsl  specular_map_color_fragment.glsl  texture_demo_fragment.glsl  texture_demo_vertex.glsl
app/src/main/cpp/: CMakeLists.txt  Camera3D.cpp  OpenGLBase.cpp  OpenGLMultiShaderBase.cpp  OpenGLSingleShaderBase.cpp  OpenGLStdImage.cpp  Opengles3D.cpp  OpenglesAttenuationLight.cpp  OpenglesCamera3D.cpp  OpenglesCode.cpp  OpenglesCube3D.cpp  OpenglesDiffuseMap.cpp  OpenglesDiffuseReflectionLight.cpp  OpenglesDirectionLight.cpp  OpenglesFlashLight.cpp  OpenglesFoundation.cpp  OpenglesLightCube.cpp  OpenglesMaterial.cpp  OpenglesMirrorLight.cpp  OpenglesMultiCube3D.cpp  OpenglesMultiLight.cpp  OpenglesSpecularLight.cpp  OpenglesSpecularMap.cpp  OpenglesSpotLight.cpp  OpenglesTexture.cpp  native-lib.cpp
app/src/main/cpp/include/: OpenGLBase.h  OpenGLConstants.h  OpenglesCode.h  OpenglesFoundation.h  OpenglesTexture.h
app/src/main/cpp/includes/: Camera3D.h  OpenGLBase.h  OpenGLConstants.h  OpenGLMultiShaderBase.h  OpenGLShader.h  OpenGLSingleShaderBase.h  Opengles3D.h  OpenglesAttenuationLight.h  OpenglesCamera3D.h  OpenglesCube3D.h  OpenglesDiffuseMap.h  OpenglesDiffuseReflectionLight.h  OpenglesDirectionLight.h  OpenglesFlashLight.h  OpenglesFoundation.h  OpenglesLightCube.h  OpenglesMaterial.h  OpenglesMirrorLight.h  OpenglesMultiCube3D.h  OpenglesMultiLight.h  OpenglesSpecularMap.h  OpenglesSpotLight.h  OpenglesTexture.h
gl3d/: build.gradle
gl3d/src/main/assets/: gl_3d_animation_fragment.glsl  gl_3d_animation_vertex.glsl  gl_3d_show_vertex.glsl  gl_draw_text_vertex.glsl
gl3d/src/main/cpp/: CMakeLists.txt  GL3DJniCall.cpp
gl3d/src/main/cpp/animator/: Animation.cpp  Animator.cpp  AssimpGLMHelpers.cpp  Bone.cpp  ModelAnimation.cpp
gl3d/src/main/cpp/gl3dshow/: GL3DAnimationShow.cpp  GL3DFlashLight.cpp  GL3DMesh.cpp  GL3DModel.cpp  GL3DShader.cpp  GL3DShow.cpp  GL3DStdImage.cpp  GLCamera3D.cpp  GLDrawText.cpp  GLShader.cpp
gl3d/src/main/cpp/includes/: GL3DAnimationShow.h  GL3DFlashLight.h  GL3DLogUtils.h  GL3DMesh.h  GL3DModel.h  GL3DShader.h  GL3DShow.h  GLCamera3D.h  GLDrawText.h  GLShader.h
gl3d/src/main/cpp/includes/animator/: Animation.h  Animator.h  AssimpGLMHelpers.h  Bone.h  ModelAnimation.h  animata.h
gl3d/src/main/cpp/includes/freetype_2_9_1/freetype/: freetype.h  ftdriver.h  ftlcdfil.h
glfoundation/: build.gradle
glfoundation/src/main/assets/: attenuation_light_cube_fragment.glsl  cube_3d_fragment.glsl  diffuse_map_color_fragment.glsl  diffuse_reflection_color_vertex.glsl  direction_light_color_fragment.glsl  light_color_fragment.glsl  material_color_fragment.glsl  material_cube_vertex.glsl  multi_cube_3d_fragment.glsl  multi_light_color_fragment.glsl  rectangle_uniform_fragment.glsl  rectangle_uniform_vertex.glsl  spot_light_color_fragment.glsl  texture_demo_vertex.glsl  triangle_shape_fragment.glsl  triangle_shape_vertex.glsl
glfoundation/src/main/cpp/: CMakeLists.txt  Camera3D.cpp  OpenGLShader.cpp  OpenGLSingleShaderBase.cpp  OpenglesCamera3D.cpp  OpenglesCube3D.cpp  OpenglesDiffuseReflectionLight.cpp  OpenglesDirectionLight.cpp  OpenglesFlashLight.cpp  OpenglesMaterial.cpp  OpenglesMultiLight.cpp  OpenglesTexture.cpp  native-lib.cpp
glfoundation/src/main/cpp/includes/: OpenGLShader.h  Opengles3D.h  OpenglesCube3D.h  OpenglesLightCube.h  OpenglesSpecularLight.h  OpenglesTexture.h
glsenior/: build.gradle
glsenior/src/main/assets/: asteroid_vertex.glsl  blending_discard_fragment.glsl  blending_discard_vertex.glsl  blending_sort_fragment.glsl  cube_map_fragment.glsl  cube_map_skybox_vertex.glsl  fbo_gray_scale_fragment.glsl  fbo_opposition_fragment.glsl  (+19 more)
glsenior/src/main/cpp/: CMakeLists.txt  GLSeniorJniCall.cpp
glsenior/src/main/cpp/3d/: GLSenior3DMesh.cpp  GLSenior3DModel.cpp  GLSenior3DShow.cpp
glsenior/src/main/cpp/includes/: GLCameraSenior.h  GLFBOPostProcessing.h  GLSenior3DMesh.h  GLSenior3DModel.h  GLSenior3DShow.h  GLSeniorBlending.h  GLSeniorBlendingDiscard.h  GLSeniorBlendingSort.h  GLSeniorCubeMap.h  GLSeniorDepthTest.h  GLSeniorFBO.h  GLSeniorFlashLight.h  GLSeniorGeometry.h  GLSeniorInstance.h  GLSeniorReflection.h  GLSeniorShader.h  GLSeniorStencilTest.h  GLSeniorUniform.h
glsenior/src/main/cpp/includes/assimp/: material.h
glsenior/src/main/cpp/senior/: GLCameraSenior.cpp  GLFBOPostProcessing.cpp  GLSeniorBlending.cpp  GLSeniorBlendingDiscard.cpp  GLSeniorBlendingSort.cpp  GLSeniorCubeMap.cpp  GLSeniorDepthTest.cpp  GLSeniorFBO.cpp  GLSeniorFlashLight.cpp  GLSeniorGeometry.cpp  GLSeniorInstance.cpp  GLSeniorReflection.cpp  GLSeniorShader.cpp  GLSeniorStencilTest.cpp  GLSeniorUniform.cpp
glshader/: build.gradle
glshader/src/main/cpp/: CMakeLists.txt  GLSLAlgoritDrawJniCall.cpp  GLSLAlgoritmDrawing.cpp  GLSLDesignGeneration.cpp  GLSLJniCall.cpp
glshader/src/main/cpp/includes/: GLColorFunction.h  GLMatricesFunction.h  GLNoiseFunction.h  GLSLCamera.h  GLSLFlashLight.h  GLSLJniCall.h  GLSLPatternsFunction.h  GLSLRandomFunction.h  GLSLShader.h  GLShapeFunction.h  GLShapingFunction.h
glshader/src/main/cpp/shader/: GLColorFunction.cpp  GLMatricesFunction.cpp  GLSLCamera.cpp  GLSLFlashLight.cpp  GLSLPatternsFunction.cpp  GLSLShader.cpp  GLShapeFunction.cpp  GLShapingFunction.cpp
glshader/src/main/cpp/shader/algoritmdrawing/: GLMatricesFunction.cpp  GLSLPatternsFunction.cpp  GLShapeFunction.cpp  GLShapingFunction.cpp
glshader/src/main/cpp/shader/designgeneration/: GLNoiseFunction.cpp  GLSLRandomFunction.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+160 files in other folders)
